--- a/src/interface.ui
+++ b/src/interface.ui
@@ -49,7 +49,7 @@
       <object class="GtkHeaderBar">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="title" translatable="yes">Mines</property>
+        <property name="title" translatable="yes">Solvable Mines</property>
         <property name="show_close_button">True</property>
         <child>
           <object class="GtkButton" id="new_game_button">
